feat: add register page

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.TASHTIT"
         tools:targetApi="31">
-
+        <activity
+            android:name=".ACTIVITIES.Register"
+            android:exported="false" />
         <activity
             android:name=".ACTIVITIES.BASE.BaseActivity"
             android:exported="false" />
