--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,10 @@
         android:theme="@style/Theme.ShareUp"
         tools:targetApi="31">
         <activity
+            android:name=".ACTIVITIES.SinglePost"
+            android:exported="false"
+            android:theme="@style/Theme.ShareUp" />
+        <activity
             android:name=".ACTIVITIES.Login"
             android:exported="true">
             <intent-filter>
