--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.ShareUp"
         tools:targetApi="31">
         <activity
+            android:name=".ACTIVITIES.Search"
+            android:exported="false" />
+        <activity
             android:name=".ACTIVITIES.UploadPost"
             android:exported="false" />
         <activity
