--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,5 @@
 [versions]
 agp = "8.7.1"
-firebaseDatabase = "21.0.0"
 junit = "4.13.2"
 junitVersion = "1.2.1"
 espressoCore = "3.6.1"
@@ -12,11 +11,9 @@ googleGmsGoogleServices = "4.4.2"
 firebaseFirestore = "25.0.0"
 playServicesTasks = "18.2.0"
 securityCrypto = "1.0.0"
-firebaseFunctions = "21.1.1"
+firebaseMessaging = "24.1.1"
 
 [libraries]
-firebase-database = { module = "com.google.firebase:firebase-database", version.ref = "firebaseDatabase" }
-firebase-storage = { module = "com.google.firebase:firebase-storage", version.ref = "firebaseDatabase" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 ext-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
 espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
@@ -27,7 +24,7 @@ constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayo
 firebase-firestore = { group = "com.google.firebase", name = "firebase-firestore", version.ref = "firebaseFirestore" }
 play-services-tasks = { module = "com.google.android.gms:play-services-tasks", version.ref = "playServicesTasks" }
 security-crypto = { module = "androidx.security:security-crypto", version.ref = "securityCrypto" }
-firebase-functions = { group = "com.google.firebase", name = "firebase-functions", version.ref = "firebaseFunctions" }
+firebase-messaging = { group = "com.google.firebase", name = "firebase-messaging", version.ref = "firebaseMessaging" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
