--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,6 +49,13 @@
         <activity
             android:name=".ACTIVITIES.BASE.BaseActivity"
             android:exported="false" />
-    </application>
 
+        <service
+            android:name=".SERVICES.FirebaseNotificationService"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
+    </application>
 </manifest>
